--- a/src/views/note.hbs
+++ b/src/views/note.hbs
@@ -27,11 +27,11 @@
               <div class="row">
                 <div class="col s6">
                   <form action="/note/delete/{{this._id}}" method="post">
-                    <button type="submit" class="col s12 btn red"></button>
+                    <button type="submit" class="col s12 btn red">Eliminar</button>
                   </form>
                 </div>
                 <div class="col s6">
-                  <a href="/note/update/{{this._id}}" class='btn green col s12'></a>
+                  <a href="/note/update/{{this._id}}" class='btn green col s12'>Actualizar</a>
                 </div>
               </div>
             </div>
