--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -14,7 +14,7 @@
         </button>
       </div>
       <p class="footer">
-        ¿Aun no tienes cuente?
+        ¿Aun no tienes cuenta?
         <br>
         <a href="/register">Crear cuenta</a>
       </p>
