--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,7 +1,7 @@
 <div class="container" style='margin-top:20px'>
   <div class="row">
     <form class="card-login" action="/register" method="POST" autocomplete="off">
-      <h4 align='center'>Iniciar Sesión</h4>
+      <h4 align='center'>Registrate</h4>
       <label for="register-user" class='form-label'>Usuario:</label>
       <input type="text" id="register-user" name="name" class='form-item' placeholder="Usuario">
       <p></p>
